--- a/LosAngelPage/package.json
+++ b/LosAngelPage/package.json
@@ -16,6 +16,7 @@
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2",
     "web-vitals": "^3.3.1"
   },
   "devDependencies": {
