--- a/LandingPage/package.json
+++ b/LandingPage/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.12.0",
     "react-dom": "^17.0.1",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
     "resolve-url-loader": "^5.0.0",
